ht_sfNewsCenter/src/objects/Google_Alert_Result__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date_Formatted__c</fullName>
        <formula>TEXT(DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Alert__c</fullName>
        <label>News Center Interest</label>
        <referenceTo>Google_Alert__c</referenceTo>
        <relationshipLabel>News Center Stories</relationshipLabel>
        <relationshipName>Google_Alert_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_URL__c</fullName>
        <formula>SUBSTITUTE(LEFT(URL__c, FIND(&apos;/&apos;, URL__c,8) -1),&apos;http://&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>News Center Story</label>
    <nameField>
        <label>News Center Story Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News Center Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>